refactor: parametrizar toolbar de configuraciones y limpiar vista index

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,10 @@ APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
+APP_VERSION=v1.0.0
+APP_DB_DISPLAY=MySQL
+APP_STATUS_LABEL=Online
+APP_STATUS_COLOR=green
 
 APP_LOCALE=es
 APP_FALLBACK_LOCALE=es
