introduccion de chat antropic
se realizo actualizacion para la integracion de antroppic claude

--- a/.env.example
+++ b/.env.example
@@ -68,4 +68,12 @@ AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
 
-GROQ_API_KEY=<your-api-key-here>
+# AI Providers
+GROQ_API_KEY=
+GROQ_MODEL=llama-3.3-70b-versatile
+
+ANTHROPIC_API_KEY=
+CLAUDE_MODEL=claude-sonnet-4-20250514
+
+# Chatbot default provider (groq or claude)
+CHATBOT_DEFAULT_PROVIDER=groq
