--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -11,7 +11,6 @@ jobs:
     name: Ejecutar Tests (PHP 8.4)
     runs-on: ubuntu-latest
     
-    # ESTRATEGIA: Si falla uno, no canceles los demás inmediatamente (opcional)
     strategy:
       fail-fast: false
       matrix:
@@ -34,6 +33,16 @@ jobs:
     steps:
     - name: Obtener código
       uses: actions/checkout@v4
+
+    - name: Instalar Node.js
+      uses: actions/setup-node@v4
+      with:
+        node-version: '20'
+
+    - name: Compilar Frontend (NPM)
+      run: |
+        npm install
+        npm run build
 
     - name: Configurar PHP ${{ matrix.php-version }}
       uses: shivammathur/setup-php@v2
