feat: actualizar nombre del trabajo en el workflow de verificación de rama de origen

--- a/.github/workflows/check-source-branch.yml
+++ b/.github/workflows/check-source-branch.yml
@@ -4,6 +4,7 @@ on:
     branches: [ main ]
 jobs:
   check-branch:
+    name: Verificar Rama de Origen
     runs-on: ubuntu-latest
     steps:
       - name: Verify dev as source
