feat: integración gemini y consulta de modelos

--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://localhost:8000
 APP_VERSION=v1.0.0
 APP_DB_DISPLAY=MySQL
 APP_STATUS_LABEL=Online
@@ -75,5 +75,8 @@ GROQ_MODEL=llama-3.3-70b-versatile
 ANTHROPIC_API_KEY=
 CLAUDE_MODEL=claude-sonnet-4-20250514
 
-# Chatbot default provider (groq or claude)
+GOOGLE_AI_STUDIO_API_KEY=
+GEMINI_MODEL=gemini-2.0-flash
+
+# Chatbot default provider (groq, claude o gemini)
 CHATBOT_DEFAULT_PROVIDER=groq
